<resources>
    <string name="app_name">Velp</string>
    <string name="action_settings">Settings</string>
    <string name="RatingTitle">Rating</string>
    <string name="Finish">Finish</string>
    <string name="take">Take</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="PassAgain">Password again</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Show">There is a secret</string>
    <string name="Age">Age</string>
    <string name="City">City</string>
    <string name="Register">Register</string>
    <string name="Type">Choose type of auth</string>
    <string name="EmailAuth">Email authentication</string>
    <string name="ToastInSingIn">Oops, There is a mistake!</string>
    <string name="registration">Sign up</string>
    <string name="login">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="swiping">Swipe to continue</string>
    <string name="start">Begin</string>
    <string name="Page">Page № </string>
    <string name="Tutorial1">Velp: Ask. Help. Application for volunteers.</string>
    <string name="Tutorial2">Add tasks and Challenges using one button. Choose the requests that you can perform in the Tasks section by clicking on the cards with a brief description.</string>
    <string name="Tutorial3">Follow the volunteer activities in the Events section. They are presented in the form of cards with a description.</string>
    <string name="Tutorial4">Become the coolest volunteer, keeping track of your status in the Rating section. There you will be able to receive purifications by completing a certain number of tasks.</string>
    <string name="Tutorial5">And you can change the theme of the application in the settings, just one click on the switch!</string>
    <string name="Tutorial6">See the location of jobs on the map using the markers! When you click on them, you can view the task.</string>
    <string name="AboutTitle">About app</string>
    <string name="MotivationText">We are deeply convinced that it is impossible to achieve the goals of a global scale alone, which is why we developed the Velp project - a place where people can unite for the sake of the common great cause. Become a part of our team to help people.</string>
    <string name="work">Become part of the team</string>
    <string name="tutorial_again">Project\'s philosophy</string>
    <string name="BonusTitle">Bonuses</string>
    <string name="Title_AlretDialogBonus">Bonus</string>
    <string name="Text_AlretDialogBonus">We are working on it!</string>
    <string name="coming_soon">Coming soon</string>
    <string name="Understood"> Understood</string>
    <string name="ChatTitle">Chat</string>
    <string name="Title_AlertDialogChat">Chat</string>
    <string name="Text_AlertDialogChat">We are working on it</string>
    <string name="Task">Tasks</string>
    <string name="Map">Map</string>
    <string name="Rating">Rating</string>
    <string name="Chat">Chat</string>
    <string name="Bonus">Bonuses</string>
    <string name="Settings">Settings</string>
    <string name="About">About app</string>
    <string name="Feedback">Contact</string>
    <string name="Share">Share</string>
    <string name="Send">Rate the app</string>
    <string name="Profile">Profile</string>
    <string name="AddTaskTitle">Adding task</string>
    <string name="Title_AlretDialogAddTask">Geodata</string>
    <string name="Text_AlretDialogAddTask">Do you want to send us your geodata? It would be easier to do your request with its help!</string>
    <string name="TaskName">Task name</string>
    <string name="Fr_Task">Task</string>
    <string name="AddTask">Add task</string>
    <string name="Fill">You did not fill in all the gaps!</string>
    <string name="ProfileTitle">Profile</string>
    <string name="Helped">Helped</string>
    <string name="leavel">Level</string>
    <string name="Points">Points</string>
    <string name="TaskTitle">Tasks</string>
    <string name="Finished">Completed</string>
    <string name="NotGot">Nobody has confirmed your task</string>
    <string name="TakeTask">Get task</string>
    <string name="AlreadyTaken">Somebody has taken this task</string>
    <string name="Taken">You took this task</string>
    <string name="Refuse">Refuse</string>
    <string name="FinishTask">Complete the task</string>
    <string name="AlreadyFinished">This task has been already completed</string>
    <string name="Own">you cannot get your own tasks</string>
    <string name="SettingsTitle">Settings</string>
    <string name="dark">Dark theme</string>
    <string name="light">Light theme</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="Dark">Chose dark theme</string>
    <string name="Logout">Log out</string>
    <string name="DellAcc">Delete account</string>
    <string name="changeUserData">Change data account</string>
    <string name="Events">Events</string>
    <string name="allRight">Everything is OK</string>
    <string name="yes">Yes</string>
    <string name="Title_AlretDialogDeleteTask">Delete the task?</string>
    <string name="taskAddInDataBase">Task has been added</string>
    <string name="Text_AlretDialogDeleteTask">Are you sure you want to delete this task?</string>
    <string name="noRootForChange">You can\'t delete not your tasks</string>
    <string name="LoadingData">Loading...</string>
    <string name="EventTitle">Events</string>
    <string name="no">No</string>
    <string name="WorkTitle">Job</string>
    <string name="informationAboutYouForWork">Fill the information about yourself</string>
    <string name="enterEmail">Enter e-mail</string>
    <string name="enterName">Enter your name</string>
    <string name="enterWorkExp">Tell us about your experience</string>
    <string name="title_work">Job</string>
    <string name="MapTitle">Map</string>
    <string name="TV">TextView</string>
    <string name="value_task">value task</string>
    <string name="task_name">Task Name</string>
    <string name="task_phone">Phone</string>
    <string name="time">time</string>
    <string name="wiliam_snoe">Wiliam Snoe</string>
    <string name="Profile_Phone">Телефон</string>
    <string name="DoneTitle">Done Task</string>
    <string name="MyTaskTitle">My Task</string>
    <string name="NotAcceptedTaskTitle">Not Accepted Task</string>
    <string name="TakenTaskTitle">Taken Task</string>
    <string name="AgeTitle">Change Age</string>
    <string name="CityTitle">Change City</string>
    <string name="EmailTitle">Change Email</string>
    <string name="NameTitle">Change Name</string>
    <string name="PhoneNamberTitle">Edit Mobile Phone Number</string>
    <string name="ChangeDataTitle">Change Data</string>
    <string name="changeAge">Edit age</string>
    <string name="changePhone">Edit mobile phone number</string>
    <string name="changeEmail">Edit email address</string>
    <string name="changeCity">Edit city</string>
    <string name="changeName">Edit name</string>
    <string name="Text_AlretDialogEmailChange">Sorry, you can\'t change your email.\nYour email:</string>
    <string name="Title_AlretDialogEmailChange">Change email</string>
    <string name="AcceptedTaskTitle">Accepted Task</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="further">further</string>
    <string name="Workkk">We are working on it</string>
    <string name="Mark">❗Password must be longer than 6 characters</string>
    <string name="Text_AlretDialogFreePoints">You do not have enough points to add a task. Want to get free points?</string>
    <string name="Title_AlretDialogFreePoints">You have no points :(</string>
    <string name="Title_AlretDialogRefuse">Abandon the task?</string>
    <string name="Text_AlretDialogFreeRefuse">Do you want to abandon the task to abandon the task?</string>
    <string name="remunerationLower">Make the reward greater than zero</string>
    <string name="remunerationBiger">Make the reward less. A maximum of 50,000</string>
    <string name="Title_AlretDialogTip">Tip</string>
    <string name="Text_AlretDialogTipMapMarker">To specify a different location, hold the marker and drag it to the desired location.</string>
    <string name="ok">ok</string>
    <string name="freePoints">You can get free 10 points every day.</string>
    <string name="Get">Get</string>
    <string name="littleTime">Too little time has passed</string>
    <string name="manyPoints">More than 10 points</string>
    <string name="textShare">You can share our app with your friends and acquaintances. Help us help others.</string>
    <string name="call">  call  </string>
    <string name="message">message</string>
    <string name="noResults">No results</string>
    <string name="noInternet">No internet</string>
    <string name="SearchTaskTitle">Search Task</string>
    <string name="smsText">Hello i am from Velp app. I help you!</string>
    <string name="Search">search</string>
    <string name="GamesTitle">Games</string>
    <string name="Upload">upload</string>
    <string name="Error">error</string>
    <string name="Complete">complete</string>
    <string name="gameText">We decided to introduce something cool! It\'s games. Hmm. Weird? We don\'t.  There will be various challenges with a high coefficient. Performing them you will also get ranking points that can be obtained only during this challenge. Participate and win!</string>
    <string name="gameTextTitle">In this week x2 points</string>
    <string name="point">points</string>
    <string name="Text_AlretDialog">Get directions</string>
    <string name="Title_AlretDialogGetDirections">Get directions</string>
    <string name="Title_AlretDialogIconClose">These are tasks that someone is already doing</string>
    <string name="Text_AlretDialogClose">These are tasks that someone is already doing</string>
    <string name="Title_AlretDialogIconTutorial">Icon Tutorial</string>
    <string name="TutorialIconClock">These are tasks that someone is already doing</string>
    <string name="TutorialIconOpen">You can perform these tasks</string>
    <string name="TutorialIconDone">These tasks you perform</string>
    <string name="TutorialIconDoneAll">You have completed these tasks</string>
    <string name="TutorialIconTitle">Learning: meaning of icons</string>
    <string name="TutorialGetDirections">Learning: the directions</string>
    <string name="TutorialGetDirectionsText">To build a route, click on the marker. Two menus appear on the map. Choose the left!</string>
    <string name="TutorialMapTitle">Learning: map</string>
    <string name="TutorialMapText">Here you can choose a task on the map. Just click on the marker. After that, a window will appear which briefly describes the job.  Click on it and find out more information.</string>
    <string name="messageMe">Writing to yourself is stupid :)</string>
    <string name="callMe">Calling yourself stupid :)</string>
    <string name="TutorialDemoTitle">Learning: Demo task</string>
    <string name="TutorialDemoText">Choose a demo task! Well tell you how it works here!</string>
    <string name="youCompleteDemo">You have completed the demo task</string>
    <string name="TutorialClickGetTask">Click get tasks. After that, you will need to call the user. Given task you will get 10 points.</string>
    <string name="TutorialEvents">Learning: Events</string>
    <string name="TutorialEventsText">In events you can help immediately large number of people! Just click on this event in which you want to help :)</string>
</resources>