<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_supervisor_account_24px"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_task"
            android:title="@string/Task" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/Map" />

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_rating"
            android:title="@string/Rating" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_events"
            android:title="@string/Events" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/Chat" />
        <item
            android:id="@+id/nav_bonus"
            android:icon="@drawable/ic_bonus"
            android:title="@string/Bonus" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/About" />
    </group>

    <item android:title="@string/Feedback">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Send" />
        </menu>
    </item>

</menu>
