<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Switch
        android:layout_margin="10dp"
        android:id="@+id/sw_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dark"
        android:textOn="@android:string/cancel" />

    <Button
        android:id="@+id/btn_signOut"
        android:background="@drawable/button_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Logout"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_dellUser"
        android:background="@drawable/button_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/DellAcc"
        android:layout_gravity="center"/>

</LinearLayout>